@@ -1,3 +1,7 @@
+2015-06-10  Liu Xin  <meteor1113@qq.com>
+
+	* init-basic.el (format-xml-directory): Add function format-xml-directory.
+
 2015-05-28  Liu Xin  <meteor1113@qq.com>
 
 	* init-basic.el (kbd): binding Ctrl-a to mark-whole-buffer.
